# postgresql-rag-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.engram/: manifest.json
openspec/: config.yaml
openspec/changes/add-test-coverage/: design.md
openspec/changes/archive/2026-07-13-add-api-key-auth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-add-test-coverage/: proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-13-distinguish-llm-transient-errors/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-fix-conftest-mock-leak/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-fix-security-credentials/: proposal.md
openspec/changes/cleanup-docs-deps/: design.md  proposal.md  tasks.md
openspec/changes/fix-security-credentials/: design.md  tasks.md
openspec/changes/refactor-graph-architecture/: proposal.md  tasks.md
openspec/specs/api-authentication/: spec.md
openspec/specs/credential-management/: spec.md
openspec/specs/project-maintenance/: spec.md
openspec/specs/test-coverage/: spec.md
scripts/: check_secrets.py
src/agent/: __init__.py  api.py  config.py  db_bootstrap.py  graph.py  neo4j_manager.py  rag.py  sql_processing.py  state.py  vectorizador1.py  wsgi.py
static/: index.html
static/video/: index.html
tests/integration_tests/: test_graph.py
tests/unit_tests/: conftest.py  test_api.py  test_configuration.py  test_db_bootstrap.py  test_security_analysis.py  test_sql_processor.py
(+12 files in other folders)
